--- a/stylus/style.css
+++ b/stylus/style.css
@@ -47,3 +47,30 @@ input{
 input:focus{
 	box-shadow: 0px 0px 8px 3px #232121;
 }
+
+.results{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0px -15px;
+}
+
+.results .result{
+ width: 40%;
+ min-width: 250px;
+ padding: 15px;
+ display: flex;
+ flex-direction: column;
+
+}
+
+.results .result img{
+	display: block;
+	width: 100%;
+}
+
+.results .result h3{
+	color: #0f0f10;
+	text-align: center;
+	font-size: 20px;
+	padding: 10px;
+}
