--- a/stylus/style.css
+++ b/stylus/style.css
@@ -55,12 +55,12 @@ input:focus{
 }
 
 .results .result{
- width: 40%;
+ width: 33%;
  min-width: 250px;
  padding: 15px;
  display: flex;
  flex-direction: column;
-
+ cursor: pointer;
 }
 
 .results .result img{
@@ -73,4 +73,78 @@ input:focus{
 	text-align: center;
 	font-size: 20px;
 	padding: 10px;
+	background: #445565;
 }
+
+.results .result:hover h3{
+	background: #f0f8ff;
+	color: #7fffd4;
+}
+
+.movieup{
+position: fixed;
+top:0;
+left: 0;
+width: 100vw;
+height: 100vh;
+background-color: #faebd7;
+overflow-y: scroll;
+}
+
+.movieup .content{
+display: block;
+width: 100%;
+max-width: 960px;
+margin: 0 auto;
+padding: 25px;
+color: #0e0e0e;
+}
+
+.movieup .content h2 span{
+	font-weight: 300;
+	font-size: 20px;
+}
+
+.movieup .content .rating{
+	margin-bottom: 30px;
+}
+
+.movieup .content .plot{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0px -15px 30px;
+}
+
+.movieup .content .plot img{
+	flex: 1 1 50%;
+	max-width: 300px;
+	padding: 0px 15px;
+}
+
+.movieup .content .plot p{
+	flex: 1 1 50%;
+	padding: 15px;
+}
+
+.movieup .content .close{
+	display: inline-block;
+	padding: 15px 30px;
+	font-size: 18px;
+	font-weight: 700;
+	background: #1367ac;
+	color: #f1f4f6;
+	border-radius: 8px;
+	border: none;
+	outline: none;
+	appearance: none;
+	cursor: pointer;
+}
+
+.movieup .content .close:hover{
+	background: #62b3f5;
+}
+
+
+
+
+
