--- a/stylus/style.css
+++ b/stylus/style.css
@@ -6,15 +6,11 @@
 
 body{
 	font-family:fantasy;
-	background-color: #554f4f;
-}
-
-div{
-	padding: 50px 15px 0px;
+	background-color: #23496b;
 }
 
 h1{
-	color: #071928;
+	color: #0e0f0f;
 	font-size: 48px;
 	font-weight: 600;
 	text-align: center;
@@ -39,19 +35,18 @@ input{
 	background: none;
 	background-color: #f0f8ff;
 	border-radius: 8px;
-	color: #1f2221;
+	color: #070808;
 	font-size: 20px;
 	font-weight: 300;
 }
 
 input:focus{
-	box-shadow: 0px 0px 8px 3px #232121;
+	box-shadow: 0px 0px 8px 3px #073961;
 }
 
 .results{
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0px -15px;
 }
 
 .results .result{
@@ -69,16 +64,16 @@ input:focus{
 }
 
 .results .result h3{
-	color: #0f0f10;
+	color: #000000;
 	text-align: center;
 	font-size: 20px;
 	padding: 10px;
-	background: #445565;
+	background:  #547288;
 }
 
 .results .result:hover h3{
-	background: #f0f8ff;
-	color: #7fffd4;
+	background: #547288;
+	color: #701313;
 }
 
 .movieup{
@@ -87,7 +82,7 @@ top:0;
 left: 0;
 width: 100vw;
 height: 100vh;
-background-color: #faebd7;
+background-color: #23496b;
 overflow-y: scroll;
 }
 
@@ -131,8 +126,8 @@ color: #0e0e0e;
 	padding: 15px 30px;
 	font-size: 18px;
 	font-weight: 700;
-	background: #1367ac;
-	color: #f1f4f6;
+	background: #547288;
+	color: #050606;
 	border-radius: 8px;
 	border: none;
 	outline: none;
